<resources>
    <string name="app_name">Layouts</string>
    <string name="escolha_o_seu_layout">Escolha o seu layout</string>
    <string name="exemplo_linear_layout">Exemplo de LinearLayout</string>
    <string name="exemplo_relative_layout">Exemplo de RelativeLayout</string>
    <string name="exemplo_absolute">Exemplo de AbsoluteLayout</string>
    <string name="exemplo_framelayout">Exemplo de FrameLayout</string>
    <string name="ja_esta_linear">Você já está em um Linear Layout!</string>
    <string name="texto_final_tela">Sou um texto no final da tela</string>
    <string name="texto_superior_direito">Sou um texto no canto superior direito</string>
    <string name="sou_um_texto_no_meio">Sou um texto no meio</string>
    <string name="estou_em_uma_posi_o_absoluta">Estou em uma posição absoluta!</string>
    <string name="digite_seu_usuario">Digite seu usuário</string>
    <string name="digite_sua_senha">Digite sua senha</string>
</resources>
