<!--Comentários-->

<LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/escolha_o_seu_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exemplo_linear_layout"
            android:layout_weight="1"
            android:onClick="exemploLinearLayout"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exemplo_relative_layout"
            android:layout_weight="1"
            android:onClick="exemploRelativeLayout"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exemplo_absolute"
            android:layout_weight="1"
            android:onClick="exemploAbsoluteLayout"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exemplo_framelayout"
            android:layout_weight="1"
            android:onClick="exemploFrameLayout"/>

    </LinearLayout>

</LinearLayout>