<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_final_tela"
        android:layout_alignParentBottom="true"
        android:textSize="22sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_superior_direito"
        android:textSize="22sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNoMeio"
        android:text="@string/sou_um_texto_no_meio"
        android:textSize="22sp"
        android:layout_centerInParent="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A"
        android:textSize="22sp"
        android:layout_above="@id/txtNoMeio"
        android:layout_toLeftOf="@id/txtNoMeio"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="B"
        android:textSize="22sp"
        android:layout_above="@id/txtNoMeio"
        android:layout_toRightOf="@id/txtNoMeio"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="C"
        android:textSize="22sp"
        android:layout_below="@id/txtNoMeio"
        android:layout_toRightOf="@id/txtNoMeio"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="D"
        android:textSize="22sp"
        android:layout_below="@id/txtNoMeio"
        android:layout_toLeftOf="@id/txtNoMeio"/>
</RelativeLayout>